--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-    <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="stylesheets/screen.css" media="screen">
     <!-- <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"> -->
     <title>白｜Barunku</title>
@@ -15,7 +12,7 @@
     <div class="shell">
       <div class="end">
         不要写啦，先把数据保存出去吧～
-        <a href="javascript:void(0)">重新开始</a>
+        <a href="/barunku/">重新开始</a>
       </div>
       <span class="tictic"></span>
       <textarea class="mytextarea"></textarea>
